# Isa-AutoFormal

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  readme.md  requirements.txt
data-generation/: .gitignore  bk.py  check_equiv.py  data_build.py  data_build.sh  data_gen.py  data_gen.sh  data_print.py  data_print.sh  fine_tune.py  lib_save.py  lib_save.sh  readme.md
data-generation/res/: results_a_-1.0_0.5.txt  results_a_0.99_1.0.txt
data-generation/retrieval/: auto_embedding.py  auto_retrieval.py  inauto_embedding.py  inauto_retrieval.py  problem_examples.py  scratch_prompt.py  sol_examples.py
data-generation/retrieval/bk_version/: embedding.py  gt_answer_auto.py  retrieval.py
data-generation/retrieval/bk_version/data_v0/: prob_embedding.pt  sol_examples.json
data-generation/retrieval/data/: auto_problem_examples.json  auto_sol_embedding.pt  inauto_prob_embedding.pt  inauto_problem_examples.json  inauto_problem_examples_init.json
data-generation/utils/: auto_utils.py  gpt_utils.py  utils.py
data_generation/: .gitignore  bk.py  check_equiv.py  data_build.py  data_build.sh  data_gen.py  data_gen.sh  data_print.py  data_print.sh  fine_tune.py  lib_save.py  lib_save.sh  readme.md
data_generation/res/: results_a_-1.0_0.5.txt  results_a_0.99_1.0.txt
data_generation/retrieval/: auto_embedding.py  auto_retrieval.py  inauto_embedding.py  inauto_retrieval.py  problem_examples.py
data_generation/retrieval/bk_version/: embedding.py  gt_answer_auto.py  retrieval.py
data_generation/retrieval/bk_version/data_v0/: sol_embedding.pt
data_generation/retrieval/data/: auto_prob_embedding.pt  auto_problem_examples.json  auto_problem_examples_init.json  auto_sol_examples_init.json  inauto_problem_examples.json  inauto_problem_examples_init.json
data_generation/utils/: auto_utils.py  gpt_utils.py  utils.py
dataset/MATH/: data_process.py  data_split.py
dataset/MATH/MATH/: README.txt
dataset/miniF2F/informal/test/: aime_1983_p1.json  aime_1983_p2.json  aime_1983_p3.json  aime_1984_p1.json  aime_1984_p7.json  aime_1987_p5.json  aime_1988_p8.json  aime_1989_p8.json  aime_1990_p15.json  aime_1990_p4.json  aime_1991_p9.json  aime_1994_p3.json  (+232 more)
equiv_checker/: PathManager.py  checker.py  cluster_statistic.py  majority_voting.py  naive_predict.py  predict.py  readme.md  run_test.py  score_label.py  set_math_level.py  syntax.py  test_cases.py
equiv_checker/draw_pictures/: calc_alpha.py  draw_accuracy_level.py  draw_alpha.py  draw_alpha_new.py  draw_cluster_size.py  draw_largest.py  draw_save_human_check.py  draw_save_human_check_level.py  linear_output.json  logistic_output.json  power_output.json
equiv_checker/utils/: all_exceptions.py  isa_utils.py  logging_utils.py  test_smtlib.smt2  z3_utils.py  z3test.py
scala-isa-project/: build.sbt  build_scala.sh  readme.md
scala-isa-project/project/: plugins.sbt
scala-isa-project/python-test/: Test.thy  example.py  test.py
website/: checker.py  eval.py  index.html  main.html  match.py  score.py  syntax.py
(+12747 files in other folders)
