[project]
name = "isa-autoformal"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "automat>=25.4.16",
    "babel>=2.17.0",
    "bcrypt>=4.3.0",
    "blinker>=1.9.0",
    "click>=8.2.1",
    "cloudpickle>=3.1.1",
    "configobj>=5.0.9",
    "cryptography>=45.0.5",
    "dbus-python>=1.4.0",
    "flask>=3.1.1",
    "func-timeout>=4.3.5",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "httplib2>=0.22.0",
    "isabelle-client>=0.5.7",
    "jeepney>=0.9.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.1",
    "jsonpatch>=1.33",
    "jsonschema>=4.25.0",
    "keyring>=25.6.0",
    "launchpadlib>=2.1.0",
    "lazr-restfulclient>=0.14.6",
    "lazr-uri>=1.0.7",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.5",
    "munkres>=1.1.4",
    "nest-asyncio>=1.6.0",
    "netifaces>=0.11.0",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "oauthlib>=3.3.1",
    "openai>=1.98.0",
    "pexpect>=4.9.0",
    "prettytable>=3.16.0",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "py4j>=0.10.9.9",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pyhamcrest>=2.1.0",
    "pyjwt>=2.10.1",
    "pyopenssl>=25.1.0",
    "pyparsing>=3.2.3",
    "pyrsistent>=0.20.0",
    "pyserial>=3.5",
    "pyspark>=4.0.0",
    "python-magic>=0.4.27",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "secretstorage>=3.3.3",
    "service-identity>=24.2.0",
    "ssh-import-id>=5.11",
    "submitit>=1.5.3",
    "timeout-decorator>=0.5.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
    "twisted>=25.5.0",
    "wadllib>=2.0.0",
    "wcwidth>=0.2.13",
    "z3-solver>=4.15.1.0",
]

[tool.ruff.lint]
select = ["NPY201"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
    "types-tqdm>=4.67.0.20250516",
]
