[project]
name = "isa-autoformal"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "fuzzywuzzy>=0.18.0",
    "isabelle-client>=0.5.7",
    "joblib>=1.5.1",
    "matplotlib>=3.10.5",
    "munkres>=1.1.4",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pyngrok>=7.3.0",
    "pysmt>=0.9.6",
    "pyspark~=3.5",
    "rank-bm25>=0.2.2",
    "scipy>=1.16.1",
    "timeout-decorator>=0.5.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "z3-solver>=4.15.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
    "scipy-stubs>=1.16.1.0",
    "types-flask-cors>=6.0.0.20250520",
    "types-networkx>=3.5.0.20250728",
    "types-tqdm>=4.67.0.20250516",
]

[tool.ruff.lint]
select = ["NPY201"]

[[tool.mypy.overrides]]
module = [
    "nltk.*",
    "py4j.*",
    "joblib",
    "timeout_decorator",
    "z3",
    "munkres",
    "rank_bm25",
    "pysmt.*",
    "fuzzywuzzy",
    "pyngrok"
]
ignore_missing_imports = true
